tests/golden/syntax_error/input.py
def broken(
    # missing closing paren and body -- exercises the parse-error path
